--- a/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj.filters
@@ -4,8 +4,11 @@
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="FooTest.cpp" />
     <ClCompile Include="SListTest.cpp" />
+    <ClCompile Include="Foo.cpp" />
+    <ClCompile Include="VectorTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Foo.h" />
   </ItemGroup>
 </Project>
