--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -8,11 +8,14 @@
     <ClInclude Include="Hashmap.h" />
     <ClInclude Include="DefaultReserveStrategy.h" />
     <ClInclude Include="DefaultHash.h" />
+    <ClInclude Include="Datum.h" />
+    <ClInclude Include="RTTI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="DefaultReserveStrategy.cpp" />
     <ClCompile Include="DefaultHash.cpp" />
+    <ClCompile Include="Datum.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="SList.inl" />
