Added Scope - forms a dynamic heirarchical database for name-value pairs (name-datum pairs) Updated Stack, Hashmap and Datum to meet the requirements of Scope

--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -10,12 +10,14 @@
     <ClInclude Include="DefaultHash.h" />
     <ClInclude Include="Datum.h" />
     <ClInclude Include="RTTI.h" />
+    <ClInclude Include="Scope.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="DefaultReserveStrategy.cpp" />
     <ClCompile Include="DefaultHash.cpp" />
     <ClCompile Include="Datum.cpp" />
+    <ClCompile Include="Scope.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="SList.inl" />
