--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj
@@ -206,6 +206,7 @@
     <ClInclude Include="Hashmap.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RTTI.h" />
+    <ClInclude Include="Scope.h" />
     <ClInclude Include="SList.h" />
     <ClInclude Include="Stack.h" />
     <ClInclude Include="Vector.h" />
@@ -220,6 +221,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Scope.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Hashmap.inl" />
