--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj
@@ -92,7 +92,7 @@
       <SDLCheck>true</SDLCheck>
       <TreatWarningAsError>true</TreatWarningAsError>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <DisableSpecificWarnings>4091;4201</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4091;4201;4239</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(SolutionDir)\..\external\glm\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -119,7 +119,7 @@
       <SDLCheck>true</SDLCheck>
       <TreatWarningAsError>true</TreatWarningAsError>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <DisableSpecificWarnings>4091;4201</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4091;4201;4239</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(SolutionDir)\..\external\glm\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -148,7 +148,7 @@
       <SDLCheck>true</SDLCheck>
       <TreatWarningAsError>true</TreatWarningAsError>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <DisableSpecificWarnings>4091;4201</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4091;4201;4239</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(SolutionDir)\..\external\glm\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -179,7 +179,7 @@
       <SDLCheck>true</SDLCheck>
       <TreatWarningAsError>true</TreatWarningAsError>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <DisableSpecificWarnings>4091;4201</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4091;4201;4239</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(SolutionDir)\..\external\glm\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -200,6 +200,7 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Attributed.h" />
     <ClInclude Include="Datum.h" />
     <ClInclude Include="DefaultHash.h" />
     <ClInclude Include="DefaultReserveStrategy.h" />
@@ -212,6 +213,7 @@
     <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Attributed.cpp" />
     <ClCompile Include="Datum.cpp" />
     <ClCompile Include="DefaultHash.cpp" />
     <ClCompile Include="DefaultReserveStrategy.cpp" />
