--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -11,6 +11,7 @@
     <ClInclude Include="Datum.h" />
     <ClInclude Include="RTTI.h" />
     <ClInclude Include="Scope.h" />
+    <ClInclude Include="Attributed.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -18,6 +19,7 @@
     <ClCompile Include="DefaultHash.cpp" />
     <ClCompile Include="Datum.cpp" />
     <ClCompile Include="Scope.cpp" />
+    <ClCompile Include="Attributed.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="SList.inl" />
