added xml parser helper to parse and create a table of nested Scope objects from an xml

--- a/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj
+++ b/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj
@@ -246,6 +246,7 @@
     <ClCompile Include="TestSharedData.cpp" />
     <ClCompile Include="VectorTest.cpp" />
     <ClCompile Include="XmlParseHelper.cpp" />
+    <ClCompile Include="XmlParseHelperTest.cpp" />
     <ClCompile Include="XmlParseMasterTest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
