--- a/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj.filters
@@ -45,6 +45,7 @@
       <Filter>TestHelpers</Filter>
     </ClCompile>
     <ClCompile Include="GraphTest.cpp" />
+    <ClCompile Include="XmlParseHelperTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
