--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -32,6 +32,7 @@
     <ClInclude Include="XmlParseHelperNameValue.h" />
     <ClInclude Include="XmlParseHelperVector.h" />
     <ClInclude Include="XmlParseHelperMatrix.h" />
+    <ClInclude Include="SharedDataTable.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -50,6 +51,7 @@
     <ClCompile Include="XmlParseHelperNameValue.cpp" />
     <ClCompile Include="XmlParseHelperVector.cpp" />
     <ClCompile Include="XmlParseHelperMatrix.cpp" />
+    <ClCompile Include="SharedDataTable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Vector.inl">
