--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj
@@ -204,6 +204,7 @@
     <ClInclude Include="Datum.h" />
     <ClInclude Include="DefaultHash.h" />
     <ClInclude Include="DefaultReserveStrategy.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="Factory.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Hashmap.h" />
@@ -211,6 +212,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="RTTI.h" />
     <ClInclude Include="Scope.h" />
+    <ClInclude Include="Sector.h" />
     <ClInclude Include="SharedDataTable.h" />
     <ClInclude Include="SList.h" />
     <ClInclude Include="Stack.h" />
@@ -225,6 +227,7 @@
     <ClCompile Include="Datum.cpp" />
     <ClCompile Include="DefaultHash.cpp" />
     <ClCompile Include="DefaultReserveStrategy.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -232,6 +235,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Scope.cpp" />
+    <ClCompile Include="Sector.cpp" />
     <ClCompile Include="SharedDataTable.cpp" />
     <ClCompile Include="XmlParseHelperNameValue.cpp" />
     <ClCompile Include="XmlParseHelperPrimitives.cpp" />
